k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: keit
  labels:
    app: keit
  annotations:
    goway-service: "true"
spec:
  type: NodePort
  ports:
  - port: 3000
    name: http
  selector:
    app: keit
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keit-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: keit
        version: v1
    spec:
      containers:
      - name: keit
        image: andrepinto/keit:1.0.1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keit-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: keit
        version: v2
    spec:
      containers:
      - name: keit
        image: andrepinto/keit:2.0.1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keit-v1
  labels:
    app: keit-v1
  annotations:
    goway-service: "true"
    goway-perfix: "api"
    trafic-control: |
      destination: pictures.example.local 
      match:
        source: frontend.example.local 
      route:
      - tags:
          version: v1.5
          env: prod
        weight: 99
      - tags:
          version: v2.0-alpha
          env: staging
      weight: 1
spec:
  backend:
    serviceName: keit-v1
    servicePort: 80
---
